plugins {
    id 'java'
    id 'info.solidsoft.pitest' version '1.9.0'
}

group 'kata'
version '1.0-SNAPSHOT'

java {
    toolchain {
        it.languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'com.approvaltests:approvaltests:23.0.1'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    implementation 'com.google.googlejavaformat:google-java-format:1.25.2'
}

pitest {
    targetClasses = ['theatricalplays.*']
    junit5PluginVersion = '1.0.0'
}